--- a/gnutella network.ipynb
+++ b/gnutella network.ipynb
@@ -216,6 +216,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the directed graph to an undirected graph\n",
+    "UG = gnutella_graph.to_undirected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the diameter of each connected component separately\n",
+    "diameters = []\n",
+    "for component in nx.connected_components(UG):\n",
+    "    subgraph = UG.subgraph(component)\n",
+    "    diameter = nx.diameter(subgraph)\n",
+    "    diameters.append(diameter)\n",
+    "\n",
+    "# Take the maximum diameter as the diameter of the entire network\n",
+    "network_diameter = max(diameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(network_diameter)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -310,6 +354,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.diameter(erdos))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -401,6 +462,84 @@
    "source": [
     "### Q4\n",
     "Find distance distribution of gnutella network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'generator' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m n_nodes \u001b[39m=\u001b[39m subgraph\u001b[39m.\u001b[39mnumber_of_nodes()\n\u001b[0;32m      8\u001b[0m distances \u001b[39m=\u001b[39m nx\u001b[39m.\u001b[39mshortest_path_length(subgraph)\n\u001b[1;32m----> 9\u001b[0m avg_distances \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(\u001b[39msum\u001b[39m(d\u001b[39m.\u001b[39mvalues()) \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m distances\u001b[39m.\u001b[39;49mvalues()) \u001b[39m/\u001b[39m (n_nodes\u001b[39m*\u001b[39m(n_nodes\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m     10\u001b[0m x_values\u001b[39m.\u001b[39mappend(n_nodes)\n\u001b[0;32m     11\u001b[0m y_values\u001b[39m.\u001b[39mappend(avg_distances)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'generator' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the average distance versus node number graph for each component\n",
+    "components = nx.connected_components(erdos)\n",
+    "x_values = []\n",
+    "y_values = []\n",
+    "for i, nodes in enumerate(components):\n",
+    "    subgraph = erdos.subgraph(nodes)\n",
+    "    n_nodes = subgraph.number_of_nodes()\n",
+    "    distances = nx.shortest_path_length(subgraph)\n",
+    "    avg_distances = sum(sum(d.values()) for d in distances.values()) / (n_nodes*(n_nodes-1))\n",
+    "    x_values.append(n_nodes)\n",
+    "    y_values.append(avg_distances)\n",
+    "\n",
+    "# plot the results\n",
+    "plt.plot(x_values, y_values, marker='o')\n",
+    "plt.xlabel('Number of nodes')\n",
+    "plt.ylabel('Average distance')\n",
+    "plt.title('Average distance versus node number for a disconnected graph')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39m#erdos = erdos.subgraph(largest_cc)\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[39m# calculate the average distance for the graph after each new node is added\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(erdos\u001b[39m.\u001b[39mnodes())\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m---> 11\u001b[0m     subgraph \u001b[39m=\u001b[39m erdos\u001b[39m.\u001b[39msubgraph(largest_cc[:i])\n\u001b[0;32m     12\u001b[0m     num_nodes\u001b[39m.\u001b[39mappend(i)\n\u001b[0;32m     13\u001b[0m     avg_distances\u001b[39m.\u001b[39mappend(nx\u001b[39m.\u001b[39maverage_shortest_path_length(subgraph))\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# create lists to store the number of nodes and their corresponding average distances\n",
+    "num_nodes = []\n",
+    "avg_distances = []\n",
+    "\n",
+    "# extract the largest connected component of the graph\n",
+    "largest_cc = max(nx.connected_components(erdos), key=len)\n",
+    "#erdos = erdos.subgraph(largest_cc)\n",
+    "\n",
+    "# calculate the average distance for the graph after each new node is added\n",
+    "for i in range(1, len(erdos.nodes())+1):\n",
+    "    subgraph = erdos.subgraph(largest_cc[:i])\n",
+    "    num_nodes.append(i)\n",
+    "    avg_distances.append(nx.average_shortest_path_length(subgraph))\n",
+    "\n",
+    "# create a scatter plot of the average distance versus node number\n",
+    "plt.scatter(num_nodes, avg_distances)\n",
+    "plt.xlabel('Number of nodes')\n",
+    "plt.ylabel('Average distance')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
